# MSDA

./: .gitignore  MSDA.AndroidCpp.vcxproj  MSDA.AndroidPackage.vcxproj  MSDA.slnx  MSDA.vcxitems  NebulaAuth.AndroidCpp.proj  NebulaAuth.AndroidCpp.vcxproj  NebulaAuth.AndroidCpp.vcxproj.filters  NebulaAuth.AndroidPackage.vcxproj  NebulaAuth.AndroidPackage.vcxproj.filters  README.md  RELEASE_v1.1.0.md  release-note-v1.0.0.md
AndroidCppApp/: CMakeLists.txt  CMakePresets.json  README.md
AndroidCppApp/docs/: ARCHITECTURE.md  GITHUB_PUBLISH.md  SETUP_AND_RUN.md
AndroidCppApp/packaging/: gradle.properties  settings.gradle
AndroidCppApp/packaging/app/: build.gradle
AndroidCppApp/packaging/app/src/main/: AndroidManifest.xml
AndroidCppApp/packaging/app/src/main/java/com/msda/android/: AppSettings.kt  BackgroundSyncAlarmReceiver.kt  BackgroundSyncScheduler.kt  BootCompletedReceiver.kt  (+10 more)
AndroidCppApp/packaging/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  logo.xml
AndroidCppApp/packaging/app/src/main/res/layout/: activity_hub.xml  activity_lock.xml  activity_main.xml  activity_settings.xml
AndroidCppApp/packaging/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
AndroidCppApp/packaging/app/src/main/res/values-night/: themes.xml
AndroidCppApp/src/android/: jni_bridge.cpp
AndroidCppApp/src/cli/: main.cpp
AndroidCppApp/src/msda/: AccountManager.cpp  AccountManager.h  MafileModels.h  MafileParser.cpp  MafileParser.h
AndroidCppApp/tools/: build-android-package.ps1  launch-from-vs.ps1  run-android-emulator.ps1
(+1 files in other folders)
